Change file: added form

--- a/file.html
+++ b/file.html
@@ -8,6 +8,15 @@
     <title>My tutorial</title>
 </head>
 <body>
-    
+   <main>
+        <form class="form">
+        <input type="checkbox" name="" id="want">
+        <p>Do you want to work in IT</p>
+        </form>
+
+
+
+   </main>
+
 </body>
 </html>
