--- a/file.html
+++ b/file.html
@@ -13,6 +13,14 @@
         <input type="checkbox" name="" id="want">
         <p>Do you want to work in IT</p>
         </form>
+        <footer>
+            <ul>
+                <li>1</li>
+                <li>3</li>
+                <li>2</li>
+
+            </ul>
+        </footer>
 
 
 
